--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <span>junjungoyala@gmail.com</span>
                     </div>
                 </div>
-                <a href="https://drive.google.com/file/d/1LbyKrp7zO7KjKscYxli0ntQ-l9a2XVvH/view?usp=share_link" class="btn">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1LbyKrp7zO7KjKscYxli0ntQ-l9a2XVvH/view?usp=sharing" class="btn">Download Resume</a>
             </div>
         </div>
     </section>
