--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
 
         <div class="box">
             <img src="portfolio5.jpg" alt=""> 
-            <h3> Activity 06 </h3>
+            <h3> Weather app </h3>
             <div class="icons">
-                <a href="#" class="fas fa-link"></a>
+                <a href="https://github.com/marjungoyala11/Weather-App-Goyala.git" class="fas fa-link"></a>
                 <a href="https://www.facebook.com/" class="fas fa-share"></a>
                 <a href="https://www.google.com/" class="fas fa-search"></a>
             </div>
