--- a/index.html
+++ b/index.html
@@ -233,6 +233,15 @@
                 <a href="https://www.google.com/" class="fas fa-search"></a>
             </div>
         </div>
+           <div class="box">
+            <img src="portfolio2.jpg" alt=""> 
+            <h3> Weather app </h3>
+            <div class="icons">
+                <a href="https://github.com/marjungoyala11/Weather-App-Goyala.git" class="fas fa-link"></a>
+                <a href="https://www.facebook.com/" class="fas fa-share"></a>
+                <a href="https://www.google.com/" class="fas fa-search"></a>
+            </div>
+        </div>
 
     </div>
 
