--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
         </div>
            <div class="box">
             <img src="portfolio2.jpg" alt=""> 
-            <h3> Weather app </h3>
+            <h3> Chat app </h3>
             <div class="icons">
-                <a href="https://github.com/marjungoyala11/Weather-App-Goyala.git" class="fas fa-link"></a>
+                <a href="https://github.com/marjungoyala11/chat-app-goyala.git" class="fas fa-link"></a>
                 <a href="https://www.facebook.com/" class="fas fa-share"></a>
                 <a href="https://www.google.com/" class="fas fa-search"></a>
             </div>
