--- a/index.html
+++ b/index.html
@@ -242,6 +242,15 @@
                 <a href="https://www.google.com/" class="fas fa-search"></a>
             </div>
         </div>
+        <div class="box">
+            <img src="portfolio1.jpg" alt=""> 
+            <h3> Activity 06 </h3>
+            <div class="icons">
+                <a href="#" class="fas fa-link"></a>
+                <a href="https://www.facebook.com/" class="fas fa-share"></a>
+                <a href="https://www.google.com/" class="fas fa-search"></a>
+            </div>
+        </div>
 
     </div>
 
